# Silk_v3_decoder

./: README.md  build.gradle  settings.gradle  versions.gradle
app/: build.gradle
app/src/androidTest/java/com/fulongbin/silk_v3_decoder/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: hello.silk  test.silk
app/src/main/java/com/fulongbin/silk_v3_decoder/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: rates.xml  strings.xml
app/src/test/java/com/fulongbin/silk_v3_decoder/: ExampleUnitTest.java
decoder/: CMakeLists.txt  build.gradle
decoder/src/androidTest/java/com/fulongbin/decoder/: ExampleInstrumentedTest.java
decoder/src/main/: AndroidManifest.xml
decoder/src/main/cpp/: decoder.cpp  easy_mad.c  easy_mad.h  silk.h  silk_decoder.c  silk_encoder.c
decoder/src/main/cpp/libmad/: Android.mk  bit.c  fixed.c  timer.c
decoder/src/main/cpp/libmp3lame/: VbrTag.c  bitstream.c  encoder.c  fft.c  gain_analysis.c  id3tag.c  lame.c  mpglib_interface.c  newmdct.c  presets.c  psymodel.c  quantize.c  quantize_pvt.c  reservoir.c  set_get.c  tables.c  takehiro.c  util.c  vbrquantize.c  version.c
decoder/src/main/cpp/libwav/: wav.c  wav.h
decoder/src/main/java/com/fulongbin/decoder/: App.java  Silk.java
decoder/src/main/res/values/: strings.xml
decoder/src/test/java/com/fulongbin/decoder/: ExampleUnitTest.java
